--- a/package.json
+++ b/package.json
@@ -24,19 +24,26 @@
     "postversion": "git push --follow-tags && npm publish",
     "prepublishOnly": "npm run build"
   },
+  "dependencies": {
+    "@types/yargs": "^17.0.35",
+    "chalk": "^5.6.2",
+    "dotenv": "^17.2.3",
+    "uint8arrays": "^5.1.0",
+    "yargs": "^18.0.0"
+  },
   "devDependencies": {
-    "@substrate-system/debug": "^0.9.2",
-    "@substrate-system/tapzero": "^0.10.5",
-    "@types/node": "^24.0.3",
+    "@substrate-system/debug": "^0.9.32",
+    "@substrate-system/tapzero": "^0.10.16",
+    "@types/node": "^24.10.1",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "auto-changelog": "^2.5.0",
-    "esbuild": "^0.25.5",
+    "esbuild": "^0.27.0",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
     "markdown-toc": "^1.2.0",
     "tap-spec": "^5.0.0",
-    "typescript": "^5.7.2"
+    "typescript": "^5.9.3"
   },
   "license": "SEE LICENSE IN LICENSE",
   "author": "nichoth <nichoth@gmail.com> (https://nichoth.com)"
