--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
+  "name": "@substrate-system/crypt",
+  "version": "0.0.1",
+  "description": "CLI tool for creating and ecoding keys",
   "type": "module",
-  "private": true,
-  "version": "0.0.0",
   "main": "dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "./dist/*"
   ],
+  "bin": {
+    "crypt": "dist/cli.js"
+  },
   "exports": {
     ".": "./dist/index.js",
     "./*": [
@@ -24,19 +29,42 @@
     "postversion": "git push --follow-tags && npm publish",
     "prepublishOnly": "npm run build"
   },
+  "dependencies": {
+    "@substrate-system/one-webcrypto": "^1.1.3",
+    "@types/yargs": "^17.0.35",
+    "chalk": "^5.6.2",
+    "dotenv": "^17.2.3",
+    "uint8arrays": "^5.1.0",
+    "yargs": "^18.0.0"
+  },
   "devDependencies": {
-    "@substrate-system/debug": "^0.9.2",
-    "@substrate-system/tapzero": "^0.10.5",
-    "@types/node": "^24.0.3",
+    "@substrate-system/debug": "^0.9.32",
+    "@substrate-system/tapzero": "^0.10.16",
+    "@types/node": "^24.10.1",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "auto-changelog": "^2.5.0",
-    "esbuild": "^0.25.5",
+    "esbuild": "^0.27.0",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
     "markdown-toc": "^1.2.0",
     "tap-spec": "^5.0.0",
-    "typescript": "^5.7.2"
+    "typescript": "^5.9.3"
+  },
+  "keywords": [
+    "cryptography",
+    "crypto",
+    "key",
+    "string",
+    "encode"
+  ],
+  "homepage": "https://github.com/substrate-system/crypt",
+  "bugs": {
+    "url": "https://github.com/substrate-system/crypt/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/substrate-system/crypt.git"
   },
   "license": "SEE LICENSE IN LICENSE",
   "author": "nichoth <nichoth@gmail.com> (https://nichoth.com)"
