--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
+    "@substrate-system/one-webcrypto": "^1.1.3",
     "@types/yargs": "^17.0.35",
     "chalk": "^5.6.2",
     "dotenv": "^17.2.3",
