--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@substrate-system/keys": "^0.2.40",
+    "@substrate-system/multikey": "^0.0.4",
     "@substrate-system/one-webcrypto": "^1.1.3",
     "@types/yargs": "^17.0.35",
     "chalk": "^5.6.2",
