--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "lint": "eslint \"./**/*.{ts,js}\"",
-    "test": "esbuild test/index.ts --platform=node --format=esm --keep-names --bundle --external:crypto --external:@substrate-system/keys/crypto --external:dotenv --external:fs --external:path --external:os | node --input-type=module",
+    "test": "npm run build && esbuild test/index.ts --platform=node --format=esm --keep-names --bundle --external:crypto --external:@substrate-system/keys/crypto --external:dotenv --external:fs --external:path --external:os | node --input-type=module",
     "build-esm": "esbuild src/*.ts --format=esm --metafile=dist/meta.json --keep-names --tsconfig=tsconfig.build.json --outdir=./dist --sourcemap && tsc --emitDeclarationOnly --project tsconfig.build.json --outDir dist",
     "build": "mkdir -p ./dist && rm -rf ./dist/* && npm run build-esm",
     "toc": "markdown-toc --maxdepth 3 -i README.md",
